--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,7 +6,7 @@ shadow-exclude = [
   "class_g ?= 'xmonad-prompt'",
   "name = 'xmonad-prompt'"
 ]
-vsync = false;
+vsync = true;
 fading = true;
 fade-in-step = 0.03
 fade-out-step = 0.03
