--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -219,11 +219,11 @@ enable-click = false
 enable-scroll = false
 
 icon-0 = ; 
-icon-1 = ;
-icon-2 = ;
-icon-3 = ;
-icon-4 = 󰙯;ﭮ
-icon-5 = 󰓇;
+icon-1 = ; 
+icon-2 = ; 
+icon-3 = ; 
+icon-4 = 󰙯;󰙯 
+icon-5 = 󰓇;󰓇 
 icon-6 = NSP;
 
 format = <label-state>
@@ -246,7 +246,7 @@ type = custom/text
 content =  "   "
 content-foreground = ${colors.mauve}
 content-offset = -16
-format-font = 5
+format-font = 0
 
 [module/spotify]
 type = custom/script
@@ -262,7 +262,7 @@ click-middle = playerctl --player=spotify previous
 [module/pacupd]
 type = custom/script
 exec = checkupdates | wc -l
-click-left = kitty -e "yay -Syyu"
+click-left = kitty -e "yay"
 interval = 300
 format-prefix = "   "
 format-prefix-foreground = ${colors.pink}
