--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -1,29 +1,29 @@
+[Patch]
+
 [Setting]
-prefs_path              = /home/ls-devs/.var/app/com.spotify.Client/config/spotify/prefs
-color_scheme            = blue
+inject_css              = 1
+overwrite_assets        = 1
 spotify_launch_flags    = 
 check_spicetify_upgrade = 0
-spotify_path            = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
+spotify_path            = /opt/spotify
+prefs_path              = /home/ls-devs/.config/spotify/prefs
 current_theme           = catppuccin-mocha
-inject_css              = 1
+color_scheme            = pink
 replace_colors          = 1
-overwrite_assets        = 1
 
 [Preprocesses]
+disable_sentry        = 1
 disable_ui_logging    = 1
 remove_rtl_rule       = 1
 expose_apis           = 1
 disable_upgrade_check = 1
-disable_sentry        = 1
 
 [AdditionalOptions]
-extensions            = catppuccin-mocha.js
-custom_apps           = 
-sidebar_config        = 1
 home_config           = 1
 experimental_features = 1
-
-[Patch]
+extensions            = catppuccin-mocha.js
+custom_apps           = marketplace
+sidebar_config        = 1
 
 ; DO NOT CHANGE!
 [Backup]
